JAVA-13298 add units tests for TestUtils